add oop-fp & module manage

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Chio's notes
+title: Chio's Personal Website
 subtitle: ''
 description: ''
 keywords:
